test/neg/neg-vis7.errc
Destination iterator's value type not convertible to T.
